# hacker-news-to-readwise-reader

./: .gitignore  CLAUDE.md  README.md  TODO.md  clean_db.py  cron_sync.sh  crontab.example  migrate_db.py  pyproject.toml  pytest.ini  setup.sh  setup_cron.sh  sync_stories.sh  test_fix.py  test_readwise_fix.py  test_readwise_min_relevance.py
docs/: content_extraction.md  db_schema.md  readwise_integration.md
prompts/: README.md  domain_relevance.txt  story_relevance.txt
src/: api.py  background_scorer.py  classifier.py  content.py  content_extractor.py  db.py  main.py  migrate_db.py  readwise.py
test_extractions/: bs4_custom_test.py  readability_test.py  research.md  test_content.py  trafilatura_test.py
tests/: conftest.py
tests/fixtures/: api_responses.py  db_fixtures.py  mock_anthropic.py  mock_api.py
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_classifier.py  test_content_extractor.py  test_db.py  test_db_readwise.py  test_main.py  test_readwise.py  test_sync.py
