[project]
name = "hackernews-poller"
version = "0.1.0"
description = "A tool for polling Hacker News for new stories"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "html2text>=2020.1.16",
    "aiohttp>=3.9.1",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
hn-poll = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]