[project]
name = "hackernews-poller"
version = "0.1.0"
description = "A tool for polling Hacker News for new stories"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "html2text>=2020.1.16",
    "aiohttp>=3.9.1",
    "asyncio>=3.4.3",
    "anthropic>=0.19.1",
    "playwright>=1.40.0",
    "trafilatura>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "aioresponses>=0.7.4",
    "responses>=0.24.0",
    "freezegun>=1.2.2",
]

[project.scripts]
hn-poll = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]